--- a/michaelkors.html
+++ b/michaelkors.html
@@ -1,51 +1,163 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Michael Kors — HIGH CHOICE</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Michael Kors – HIGH CHOICE</title>
+<link rel="icon" type="image/png" href="favicon.png" />
 
 <style>
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-body{background:#050814;color:white;}
-header{
-  padding:18px;background:rgba(255,255,255,0.05);
-  text-align:center;font-weight:700;color:#b9aaff;
-}
-.container{padding:20px;max-width:1100px;margin:auto;}
-.grid{display:flex;flex-wrap:wrap;gap:20px;justify-content:center;}
-.card{
-  width:300px;background:rgba(255,255,255,0.05);
-  padding:14px;border-radius:14px;
-}
-.card img{width:100%;height:220px;object-fit:cover;border-radius:10px;}
-.card h3{margin:10px 0 3px;}
-.price{color:#c7c9d9;margin-bottom:12px;}
-.btn{
-  display:block;background:#b9aaff;color:#050814;
-  padding:10px;text-align:center;border-radius:10px;
-  font-weight:700;text-decoration:none;
-}
+  :root{
+    --bg:#0e0f19;
+    --card:rgba(255,255,255,0.08);
+    --text:#fff;
+    --muted:#bfbfd2;
+    --accent:#ff9ad5;
+  }
+  *{box-sizing:border-box}
+  body{
+    margin:0;
+    font-family:"Poppins",system-ui,Segoe UI,Roboto,Arial;
+    background:var(--bg);
+    color:var(--text);
+  }
+
+  header{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding:14px 18px;
+    background:rgba(0,0,0,0.35);
+    backdrop-filter:blur(8px);
+    position:sticky;
+    top:0;
+    z-index:999;
+    border-bottom:1px solid rgba(255,255,255,0.05);
+  }
+  .logo{display:flex;gap:10px;align-items:center}
+  .logo img{height:36px}
+  .logo span{font-weight:700;color:var(--accent);font-size:18px}
+
+  .menu-btn{
+    width:40px;height:40px;border-radius:8px;
+    display:flex;align-items:center;justify-content:center;
+    background:rgba(255,255,255,0.06);cursor:pointer;font-size:20px;
+  }
+
+  /* Drawer */
+  #drawer{
+    position:fixed;right:-100%;top:0;height:100%;width:72%;
+    max-width:320px;background:#070b12;padding:22px;transition:.34s;z-index:998;
+  }
+  #drawer.open{right:0}
+  #drawer a{display:block;color:var(--text);padding:12px 6px;border-bottom:1px solid rgba(255,255,255,0.06);text-decoration:none;font-weight:600}
+
+  .page-title{ text-align:center;margin:22px 16px 6px;font-size:26px;font-weight:800;color:var(--accent) }
+  .brand-logo{display:flex;justify-content:center;margin-bottom:12px}
+  .brand-logo img{height:64px}
+
+  main{ padding:18px; max-width:1100px; margin:0 auto; }
+
+  .models{ display:flex;flex-direction:column; gap:18px; }
+
+  .card{
+    background:var(--card);border-radius:14px;padding:14px;border:1px solid rgba(255,255,255,0.06);
+    overflow:hidden;
+  }
+
+  .slider{ position:relative;height:260px;border-radius:10px; overflow:hidden; background:#000; }
+  .slide{ position:absolute; inset:0; opacity:0; transition:opacity .5s ease; }
+  .slide.visible{ opacity:1; }
+  .slide img{ width:100%; height:100%; object-fit:cover; display:block; }
+
+  .dots{ display:flex; gap:8px; justify-content:center; margin-top:10px; }
+  .dot{ width:10px;height:10px;border-radius:50%; background:rgba(255,255,255,0.25); cursor:pointer; }
+  .dot.active{ background:var(--accent); }
+
+  h3{ margin:12px 0 6px; font-size:18px }
+  .price{ color:var(--muted); font-weight:700; margin-bottom:10px }
+
+  .btn{
+    width:100%; padding:12px;border-radius:10px;border:0;font-weight:800;
+    background:var(--accent); color:#000; cursor:pointer; font-size:15px;
+  }
+
+  footer{ text-align:center;color:var(--muted); padding:26px 10px; margin-top:10px }
+
+  /* responsive grid if you add more cards later */
+  @media(min-width:900px){
+    .models{ grid-template-columns: 1fr 1fr; display:grid; grid-gap:20px; }
+    .slider{ height:220px }
+  }
 </style>
 </head>
-
 <body>
 
-<header>HIGH CHOICE — Michael Kors</header>
-
-<div class="container">
-<div class="grid">
-
-  <div class="card">
-    <img src="https://images.unsplash.com/photo-1523275335684-37898b6baf30?auto=format&w=900">
-    <h3>Michael Kors</h3>
-    <p class="price">₹1699</p>
-    <a class="btn" href="order.html?product=Michael%20Kors&price=1699">Buy Now</a>
+<header>
+  <div class="logo">
+    <img src="highchoice_logo.png" alt="HIGH CHOICE">
+    <span>HIGH CHOICE</span>
   </div>
+  <div class="menu-btn" onclick="toggleMenu()">☰</div>
+</header>
 
-</div>
-</div>
+<nav id="drawer">
+  <a href="index.html">Home</a>
+  <a href="men.html">Men</a>
+  <a href="women.html">Women</a>
+  <a href="kids.html">Kids</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+  <a href="return.html">Return & Replace</a>
+</nav>
+
+<main>
+  <div class="page-title">Michael Kors</div>
+  <div class="brand-logo"><img src="michaelkors_logo.png" alt="Michael Kors"></div>
+
+  <section class="models">
+
+    <!-- Single product card (price set to ₹1699 as provided) -->
+    <article class="card">
+      <div class="slider" data-model="mk-collection">
+        <div class="slide visible"><img src="michaelkors1.jpg" alt="Michael Kors 1"></div>
+        <div class="slide"><img src="michaelkors2.jpg" alt="Michael Kors 2"></div>
+        <div class="slide"><img src="michaelkors3.jpg" alt="Michael Kors 3"></div>
+      </div>
+
+      <div class="dots" aria-hidden="true"></div>
+
+      <h3>Michael Kors Collection</h3>
+      <div class="price">₹1699/-</div>
+      <button class="btn" onclick="location.href='order.html?model=Michael Kors Collection&price=1699'">Buy Now</button>
+    </article>
+
+  </section>
+</main>
+
+<footer>© 2025 HIGH CHOICE — All Rights Reserved</footer>
+
+<script>
+  function toggleMenu(){ document.getElementById('drawer').classList.toggle('open'); }
+
+  // slider init
+  document.querySelectorAll('.slider').forEach((slider)=>{
+    const slides = slider.querySelectorAll('.slide');
+    const dotsBox = slider.parentElement.querySelector('.dots');
+
+    slides.forEach((s,i)=>{
+      const dot = document.createElement('div');
+      dot.className = 'dot'; if(i===0) dot.classList.add('active');
+      dot.addEventListener('click', ()=> {
+        slides.forEach(x=>x.classList.remove('visible'));
+        slides[i].classList.add('visible');
+        dotsBox.querySelectorAll('.dot').forEach(d=>d.classList.remove('active'));
+        dot.classList.add('active');
+      });
+      dotsBox.appendChild(dot);
+    });
+  });
+</script>
 
 </body>
-</html>
+    </html>
