--- a/dior.html
+++ b/dior.html
@@ -1,34 +1,170 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Dior — HIGH CHOICE</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Dior – HIGH CHOICE</title>
+<link rel="icon" type="image/png" href="favicon.png" />
 
 <style>
-body{margin:0;background:#050814;color:white;font-family:'Poppins';}
-header{text-align:center;padding:18px;background:rgba(255,255,255,0.05);color:#b9aaff;font-weight:700;}
-.container{padding:20px;}
-.card{width:300px;margin:auto;background:rgba(255,255,255,0.05);padding:15px;border-radius:14px;}
-.card img{width:100%;height:220px;object-fit:cover;border-radius:10px;}
-.price{color:#c7c9d9;}
-.btn{display:block;padding:10px;border-radius:10px;background:#b9aaff;color:#050814;text-decoration:none;text-align:center;margin-top:10px;font-weight:700;}
+  :root{
+    --bg:#0e0f19;
+    --card:rgba(255,255,255,0.08);
+    --text:#fff;
+    --muted:#bfbfd2;
+    --accent:#c7b1ff;
+  }
+  *{box-sizing:border-box}
+  body{
+    margin:0;
+    font-family:"Poppins",system-ui,Segoe UI,Roboto,Arial;
+    background:var(--bg);
+    color:var(--text);
+  }
+
+  header{
+    display:flex;
+    align-items:center;
+    justify-content:space-between;
+    padding:14px 18px;
+    background:rgba(0,0,0,0.35);
+    backdrop-filter:blur(8px);
+    position:sticky;
+    top:0;
+    z-index:999;
+    border-bottom:1px solid rgba(255,255,255,0.05);
+  }
+  .logo{display:flex;gap:10px;align-items:center}
+  .logo img{height:36px}
+  .logo span{font-weight:700;color:var(--accent);font-size:18px}
+
+  .menu-btn{
+    width:40px;height:40px;border-radius:8px;
+    display:flex;align-items:center;justify-content:center;
+    background:rgba(255,255,255,0.06);cursor:pointer;font-size:20px;
+  }
+
+  /* Drawer */
+  #drawer{
+    position:fixed;right:-100%;top:0;height:100%;width:72%;
+    max-width:320px;background:#070b12;padding:22px;transition:.34s;z-index:998;
+  }
+  #drawer.open{right:0}
+  #drawer a{display:block;color:var(--text);padding:12px 6px;border-bottom:1px solid rgba(255,255,255,0.06);text-decoration:none;font-weight:600}
+
+  .page-title{ text-align:center;margin:22px 16px 6px;font-size:26px;font-weight:800;color:var(--accent) }
+  .brand-logo{display:flex;justify-content:center;margin-bottom:12px}
+  .brand-logo img{height:64px}
+
+  main{ padding:18px; max-width:1100px; margin:0 auto; }
+
+  .models{ display:flex;flex-direction:column; gap:18px; }
+
+  .card{
+    background:var(--card);border-radius:14px;padding:14px;border:1px solid rgba(255,255,255,0.06);
+    overflow:hidden;
+  }
+
+  .slider{ position:relative;height:260px;border-radius:10px; overflow:hidden; background:#000; }
+  .slide{ position:absolute; inset:0; opacity:0; transition:opacity .5s ease; }
+  .slide.visible{ opacity:1; }
+  .slide img{ width:100%; height:100%; object-fit:cover; display:block; }
+
+  .dots{ display:flex; gap:8px; justify-content:center; margin-top:10px; }
+  .dot{ width:10px;height:10px;border-radius:50%; background:rgba(255,255,255,0.25); cursor:pointer; }
+  .dot.active{ background:var(--accent); }
+
+  h3{ margin:12px 0 6px; font-size:18px }
+  .price{ color:var(--muted); font-weight:700; margin-bottom:10px }
+
+  .btn{
+    width:100%; padding:12px;border-radius:10px;border:0;font-weight:800;
+    background:var(--accent); color:#000; cursor:pointer; font-size:15px;
+  }
+
+  footer{ text-align:center;color:var(--muted); padding:26px 10px; margin-top:10px }
+
+  @media(min-width:900px){
+    .models{ grid-template-columns: 1fr 1fr; display:grid; grid-gap:20px; }
+    .slider{ height:220px }
+  }
 </style>
-
 </head>
-
 <body>
 
-<header>HIGH CHOICE — Dior</header>
+<header>
+  <div class="logo">
+    <img src="highchoice_logo.png" alt="HIGH CHOICE">
+    <span>HIGH CHOICE</span>
+  </div>
+  <div class="menu-btn" onclick="toggleMenu()">☰</div>
+</header>
 
-<div class="container">
-<div class="card">
-  <img src="https://images.unsplash.com/photo-1507679799987-c73779587ccf?auto=format&w=900">
-  <h3>Dior Women</h3>
-  <p class="price">₹1849</p>
-  <a class="btn" href="order.html?product=Dior&price=1849">Buy Now</a>
-</div>
-</div>
+<nav id="drawer">
+  <a href="index.html">Home</a>
+  <a href="men.html">Men</a>
+  <a href="women.html">Women</a>
+  <a href="kids.html">Kids</a>
+  <a href="about.html">About</a>
+  <a href="contact.html">Contact</a>
+  <a href="return.html">Return & Replace</a>
+</nav>
+
+<main>
+  <div class="page-title">Dior Collection</div>
+  <div class="brand-logo"><img src="dior_logo.png" alt="Dior"></div>
+
+  <section class="models">
+
+    <!-- Single product card (price ₹1849) -->
+    <article class="card">
+      <div class="slider">
+        <div class="slide visible"><img src="dior1.jpg" alt="Dior 1"></div>
+        <div class="slide"><img src="dior2.jpg" alt="Dior 2"></div>
+        <div class="slide"><img src="dior3.jpg" alt="Dior 3"></div>
+      </div>
+
+      <div class="dots"></div>
+
+      <h3>Dior Premium Collection</h3>
+      <div class="price">₹1849/-</div>
+
+      <button class="btn" onclick="location.href='order.html?model=Dior Collection&price=1849'">
+        Buy Now
+      </button>
+    </article>
+
+  </section>
+</main>
+
+<footer>© 2025 HIGH CHOICE — All Rights Reserved</footer>
+
+<script>
+  function toggleMenu(){
+    document.getElementById('drawer').classList.toggle('open');
+  }
+
+  // slider init
+  document.querySelectorAll('.slider').forEach((slider)=>{
+    const slides = slider.querySelectorAll('.slide');
+    const dotsBox = slider.parentElement.querySelector('.dots');
+
+    slides.forEach((s,i)=>{
+      const dot=document.createElement('div');
+      dot.className='dot';
+      if(i===0) dot.classList.add('active');
+
+      dot.addEventListener('click', ()=>{
+        slides.forEach(x=>x.classList.remove('visible'));
+        slides[i].classList.add('visible');
+        dotsBox.querySelectorAll('.dot').forEach(d=>d.classList.remove('active'));
+        dot.classList.add('active');
+      });
+
+      dotsBox.appendChild(dot);
+    });
+  });
+</script>
 
 </body>
 </html>
