--- a/order.html
+++ b/order.html
@@ -1,158 +1,160 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Place Order — HIGH CHOICE</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+<title>Complete Your Order – HIGH CHOICE</title>
+<link rel="icon" type="image/png" href="favicon.png">
 
 <style>
 :root{
-  --bg-1:#050814;
-  --bg-2:#061127;
-  --accent:#b9aaff;
-  --muted:#94a0c9;
-  --card:rgba(255,255,255,0.06);
-  --radius:16px;
+  --bg:#0e0f19;
+  --text:#ffffff;
+  --muted:#bfbfd2;
+  --accent:#7ee2ff;
+  --card:rgba(255,255,255,0.08);
 }
-
-*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',sans-serif;}
-
+*{margin:0;padding:0;box-sizing:border-box}
 body{
-  background:linear-gradient(180deg,var(--bg-1),var(--bg-2));
-  color:white;overflow-x:hidden;
+  background:var(--bg);
+  font-family:"Poppins",system-ui,Roboto,Arial;
+  color:var(--text);
 }
 
-/* Background animation */
-.bg{position:fixed;inset:0;pointer-events:none;z-index:0;}
-.bubble{
-  position:absolute;border-radius:50%;filter:blur(40px);
-  mix-blend-mode:screen;opacity:.9;animation:float 16s infinite linear;
-}
-@keyframes float{
-  0%{transform:translateX(0) translateY(0);}
-  50%{transform:translateX(25px) translateY(20px);}
-  100%{transform:translateX(0) translateY(0);}
-}
-.b1{width:420px;height:240px;left:-5%;top:10%;background:radial-gradient(circle,#8b6cff,transparent 40%);}
-.b2{width:450px;height:250px;right:5%;top:5%;background:radial-gradient(circle,#4dc1ff,transparent 40%);}
-.b3{width:350px;height:200px;left:20%;top:18%;background:radial-gradient(circle,#bf63ff,transparent 40%);}
-
-/* Header */
 header{
-  position:fixed;top:0;left:0;right:0;padding:16px 24px;
-  display:flex;align-items:center;justify-content:space-between;
-  background:rgba(0,0,0,0.25);backdrop-filter:blur(8px);
+  padding:14px 18px;
+  display:flex;justify-content:space-between;align-items:center;
+  background:rgba(0,0,0,0.35);
+  backdrop-filter:blur(8px);
   border-bottom:1px solid rgba(255,255,255,0.05);
-  z-index:50;
+  position:sticky;top:0;
 }
-.logo{font-size:20px;font-weight:700;color:var(--accent);}
+.logo{display:flex;gap:10px;align-items:center}
+.logo img{height:36px}
+.logo span{color:var(--accent);font-size:18px;font-weight:700}
 
-/* Form container */
-main{padding-top:95px;position:relative;z-index:5;}
-.form-box{
-  max-width:500px;margin:0 auto;background:var(--card);
-  padding:25px;border-radius:var(--radius);
-  border:1px solid rgba(255,255,255,0.07);
-  box-shadow:0 15px 45px rgba(0,0,0,0.4);
+main{
+  padding:20px;max-width:600px;margin:auto;
 }
-h2{text-align:center;margin-bottom:20px;color:var(--accent);}
 
-label{display:block;margin:12px 0 4px;font-weight:600;}
+h2{
+  text-align:center;font-size:26px;
+  font-weight:800;color:var(--accent);margin-bottom:12px;
+}
+
+.card{
+  background:var(--card);
+  padding:20px;border-radius:16px;
+  border:1px solid rgba(255,255,255,0.06);
+}
+
+label{
+  display:block;font-weight:600;margin:10px 0 4px;
+}
+
 input,select,textarea{
-  width:100%;padding:12px;border-radius:var(--radius);
-  background:rgba(255,255,255,0.07);border:1px solid rgba(255,255,255,0.12);
-  color:white;font-size:15px;outline:none;
+  width:100%;padding:12px;border-radius:10px;
+  border:none;margin-bottom:14px;
+  background:rgba(255,255,255,0.12);
+  color:var(--text);font-size:15px;
 }
-textarea{height:110px;resize:none;}
 
-button{
-  width:100%;padding:14px;margin-top:16px;font-size:17px;
-  font-weight:700;border:none;border-radius:var(--radius);
-  color:#050814;background:var(--accent);cursor:pointer;
+textarea{height:100px;resize:none}
+
+.radio-group{
+  display:flex;gap:20px;margin:10px 0 16px;
 }
-button:hover{opacity:.85;}
+
+.btn{
+  width:100%;padding:14px;border-radius:12px;border:none;
+  background:var(--accent);color:#000;font-weight:800;
+  font-size:16px;cursor:pointer;margin-top:10px;
+}
+
+.hidden{display:none}
+
+footer{
+  text-align:center;color:var(--muted);
+  padding:26px 10px;margin-top:20px;
+}
 </style>
 </head>
 
 <body>
 
-<!-- Background animation -->
-<div class="bg">
-  <div class="bubble b1"></div>
-  <div class="bubble b2"></div>
-  <div class="bubble b3"></div>
-</div>
-
 <header>
-  <div class="logo">HIGH CHOICE</div>
+  <div class="logo">
+    <img src="highchoice_logo.png">
+    <span>HIGH CHOICE</span>
+  </div>
 </header>
 
 <main>
-<div class="form-box">
 
   <h2>Complete Your Order</h2>
 
-  <label>Product</label>
-  <input type="text" id="product" readonly>
+  <div class="card">
 
-  <label>Price (₹)</label>
-  <input type="text" id="price" readonly>
+    <label>Product</label>
+    <input id="productName" type="text" readonly>
 
-  <label>Your Name</label>
-  <input type="text" id="name" placeholder="Enter your full name" required>
+    <label>Price (₹)</label>
+    <input id="productPrice" type="text" readonly>
 
-  <label>Phone Number</label>
-  <input type="text" id="phone" placeholder="Enter your number" required>
+    <label>Your Name</label>
+    <input id="name" type="text" placeholder="Full Name">
 
-  <label>Full Address</label>
-  <textarea id="address" placeholder="House No, Area, City, Pincode" required></textarea>
+    <label>Phone Number</label>
+    <input id="phone" type="number" placeholder="Phone Number">
 
-  <label>Payment Method</label>
-  <select id="payment">
-    <option value="Cash on Delivery">Cash on Delivery</option>
-    <option value="Prepaid">Prepaid</option>
-  </select>
+    <label>Full Address</label>
+    <textarea id="address" placeholder="House no, Area, City, Pincode"></textarea>
 
-  <button onclick="placeOrder()">Place Order</button>
+    <label>Payment Method</label>
+    <div class="radio-group">
+      <label><input type="radio" name="pay" value="COD" checked> COD</label>
+      <label><input type="radio" name="pay" value="Prepaid"> Prepaid</label>
+    </div>
 
-</div>
+    <button class="btn" onclick="placeOrder()">Place Order</button>
+
+  </div>
 </main>
 
+<footer>© 2025 HIGH CHOICE — All Rights Reserved</footer>
+
 <script>
-// Load product and price from URL
-const urlParams = new URLSearchParams(window.location.search);
-document.getElementById("product").value = urlParams.get("product") || "";
-document.getElementById("price").value = urlParams.get("price") || "";
+// Load product details
+const url = new URLSearchParams(window.location.search);
+document.getElementById("productName").value = url.get("model");
+document.getElementById("productPrice").value = url.get("price");
 
-// Hidden WhatsApp number
-const adminNumber = "917869288078"; // No + and no spaces
-
+// Submit order
 function placeOrder(){
-  let product = document.getElementById("product").value;
-  let price = document.getElementById("price").value;
   let name = document.getElementById("name").value;
   let phone = document.getElementById("phone").value;
   let address = document.getElementById("address").value;
-  let payment = document.getElementById("payment").value;
+  let product = document.getElementById("productName").value;
+  let price = document.getElementById("productPrice").value;
+  let pay = document.querySelector("input[name='pay']:checked").value;
 
   if(!name || !phone || !address){
-    alert("Please fill all the details.");
+    alert("Please fill all details");
     return;
   }
 
-  let msg =
-    "🛒 *New Order Received*\n\n" +
-    "*Product:* " + product + "\n" +
-    "*Price:* ₹" + price + "\n\n" +
-    "*Customer Name:* " + name + "\n" +
-    "*Phone:* " + phone + "\n" +
-    "*Address:* " + address + "\n\n" +
-    "*Payment Method:* " + payment;
+  // COD → Success Page
+  if(pay === "COD"){
+    window.location.href =
+      `success.html?model=${product}&price=${price}&name=${name}&phone=${phone}`;
+    return;
+  }
 
-  let whatsappURL = "https://wa.me/" + adminNumber + "?text=" + encodeURIComponent(msg);
-
-  window.location.href = whatsappURL;
+  // Prepaid → UPI Page
+  if(pay === "Prepaid"){
+    window.location.href =
+      `upi.html?model=${product}&price=${price}&name=${name}&phone=${phone}`;
+  }
 }
 </script>
 
